update audio api
